--- a/PoC - W-k spectra.ipynb
+++ b/PoC - W-k spectra.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:33:54.525478Z",
-     "start_time": "2020-05-04T05:33:54.519859Z"
+     "end_time": "2020-05-04T07:26:51.686984Z",
+     "start_time": "2020-05-04T07:26:51.682604Z"
     },
     "init_cell": true
    },
@@ -28,8 +28,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:33:54.963702Z",
-     "start_time": "2020-05-04T05:33:54.530480Z"
+     "end_time": "2020-05-04T07:26:52.128581Z",
+     "start_time": "2020-05-04T07:26:51.694187Z"
     },
     "init_cell": true
    },
@@ -49,8 +49,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:33:54.997079Z",
-     "start_time": "2020-05-04T05:33:54.965208Z"
+     "end_time": "2020-05-04T07:26:52.161468Z",
+     "start_time": "2020-05-04T07:26:52.130672Z"
     },
     "init_cell": true
    },
@@ -74,14 +74,14 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:33:55.004831Z",
-     "start_time": "2020-05-04T05:33:54.999474Z"
+     "end_time": "2020-05-04T07:26:52.168830Z",
+     "start_time": "2020-05-04T07:26:52.163032Z"
     },
     "init_cell": true
    },
    "outputs": [],
    "source": [
-    "from spectral_analysis.preprocess.common_vars import LUIGI_OUT_FOLDER\n",
+    "from common_vars.directories import LUIGI_OUT_FOLDER\n",
     "fname_var_fmt = LUIGI_OUT_FOLDER+\"/Datasets_compressed/{0}/{1}/{2}0_{3:05d}.npz\"\n",
     "fname_grid_fmt = LUIGI_OUT_FOLDER+\"/Datasets_compressed/{0}/hours/{1}.txt\"\n",
     "spectra_fn_fmt = LUIGI_OUT_FOLDER+\"/spectra/{0}/{1}_{2}_{3}.npz\""
@@ -92,8 +92,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.609349Z",
-     "start_time": "2020-05-04T05:33:55.006151Z"
+     "end_time": "2020-05-04T07:26:52.175945Z",
+     "start_time": "2020-05-04T07:26:52.170227Z"
     },
     "init_cell": true
    },
@@ -109,8 +109,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.622315Z",
-     "start_time": "2020-05-04T05:34:00.612352Z"
+     "end_time": "2020-05-04T07:26:52.188371Z",
+     "start_time": "2020-05-04T07:26:52.179482Z"
     },
     "init_cell": true
    },
@@ -151,8 +151,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.627034Z",
-     "start_time": "2020-05-04T05:34:00.623828Z"
+     "end_time": "2020-05-04T07:26:52.194474Z",
+     "start_time": "2020-05-04T07:26:52.191293Z"
     },
     "init_cell": true
    },
@@ -171,8 +171,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.631196Z",
-     "start_time": "2020-05-04T05:34:00.628330Z"
+     "end_time": "2020-05-04T07:26:52.198790Z",
+     "start_time": "2020-05-04T07:26:52.196064Z"
     },
     "init_cell": true
    },
@@ -189,8 +189,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.636768Z",
-     "start_time": "2020-05-04T05:34:00.634058Z"
+     "end_time": "2020-05-04T07:26:52.203254Z",
+     "start_time": "2020-05-04T07:26:52.200382Z"
     },
     "init_cell": true
    },
@@ -208,8 +208,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.641281Z",
-     "start_time": "2020-05-04T05:34:00.639201Z"
+     "end_time": "2020-05-04T07:26:52.206805Z",
+     "start_time": "2020-05-04T07:26:52.204656Z"
     },
     "init_cell": true
    },
@@ -224,8 +224,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.644879Z",
-     "start_time": "2020-05-04T05:34:00.642674Z"
+     "end_time": "2020-05-04T07:26:52.210349Z",
+     "start_time": "2020-05-04T07:26:52.208203Z"
     },
     "init_cell": true
    },
@@ -240,8 +240,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.648861Z",
-     "start_time": "2020-05-04T05:34:00.646133Z"
+     "end_time": "2020-05-04T07:26:52.214493Z",
+     "start_time": "2020-05-04T07:26:52.211727Z"
     },
     "init_cell": true
    },
@@ -258,8 +258,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.652945Z",
-     "start_time": "2020-05-04T05:34:00.650198Z"
+     "end_time": "2020-05-04T07:26:52.218227Z",
+     "start_time": "2020-05-04T07:26:52.215748Z"
     },
     "init_cell": true
    },
@@ -274,8 +274,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.657205Z",
-     "start_time": "2020-05-04T05:34:00.654345Z"
+     "end_time": "2020-05-04T07:26:52.222526Z",
+     "start_time": "2020-05-04T07:26:52.219622Z"
     },
     "init_cell": true
    },
@@ -293,8 +293,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.661480Z",
-     "start_time": "2020-05-04T05:34:00.658714Z"
+     "end_time": "2020-05-04T07:26:52.226468Z",
+     "start_time": "2020-05-04T07:26:52.223824Z"
     },
     "init_cell": true
    },
@@ -312,8 +312,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.666177Z",
-     "start_time": "2020-05-04T05:34:00.663153Z"
+     "end_time": "2020-05-04T07:26:52.230746Z",
+     "start_time": "2020-05-04T07:26:52.227766Z"
     },
     "init_cell": true
    },
@@ -328,11 +328,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:42:47.296090Z",
-     "start_time": "2020-05-04T05:42:47.276958Z"
+     "end_time": "2020-05-04T07:26:52.243319Z",
+     "start_time": "2020-05-04T07:26:52.232327Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -410,11 +410,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:42:48.784123Z",
-     "start_time": "2020-05-04T05:42:48.766030Z"
+     "end_time": "2020-05-04T07:26:52.255663Z",
+     "start_time": "2020-05-04T07:26:52.244984Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -492,8 +492,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-04T05:34:00.700379Z",
-     "start_time": "2020-05-04T05:34:00.692305Z"
+     "end_time": "2020-05-04T07:26:52.264909Z",
+     "start_time": "2020-05-04T07:26:52.257173Z"
     },
     "code_folding": [],
     "init_cell": true
