--- a/PoC - W-k spectra.ipynb
+++ b/PoC - W-k spectra.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:17.168837Z",
-     "start_time": "2020-06-04T08:35:17.164009Z"
+     "end_time": "2020-06-04T09:07:12.883022Z",
+     "start_time": "2020-06-04T09:07:12.878853Z"
     },
     "init_cell": true
    },
@@ -28,8 +28,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:17.844097Z",
-     "start_time": "2020-06-04T08:35:17.173308Z"
+     "end_time": "2020-06-04T09:07:13.311833Z",
+     "start_time": "2020-06-04T09:07:12.890587Z"
     },
     "init_cell": true
    },
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:50:14.069729Z",
-     "start_time": "2020-06-04T08:50:06.742972Z"
+     "end_time": "2020-06-04T09:07:13.848034Z",
+     "start_time": "2020-06-04T09:07:13.313931Z"
     },
     "init_cell": true
    },
@@ -72,26 +72,26 @@
     "import spectral_analysis.common_vars.regions\n",
     "reload(spectral_analysis.common_vars.regions)\n",
     "\n",
-    "import spectral_analysis.ro_b_workflow.output\n",
-    "reload(spectral_analysis.ro_b_workflow.output)\n",
+    "import spectral_analysis.luigi_workflows.output\n",
+    "reload(spectral_analysis.luigi_workflows.output)\n",
     "\n",
-    "from spectral_analysis.ro_b_workflow.output import uv4idt,UV4id,VorticityGrid"
+    "from spectral_analysis.luigi_workflows.output import uv4idt,UV4id,VorticityGrid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:49:15.285108Z",
-     "start_time": "2020-06-04T08:49:15.280976Z"
+     "end_time": "2020-06-04T09:07:13.855441Z",
+     "start_time": "2020-06-04T09:07:13.850952Z"
     },
     "init_cell": true
    },
    "outputs": [],
    "source": [
     "#from spectral_analysis.common_vars.directories import LUIGI_OUT_FOLDER\n",
-    "from spectral_analysis.ro_b_workflow.output import LUIGI_OUT_FOLDER\n",
+    "from spectral_analysis.luigi_workflows.output import LUIGI_OUT_FOLDER\n",
     "fname_var_fmt = LUIGI_OUT_FOLDER+\"/Datasets_compressed/{0}/{1}/{2}0_{3:05d}.npz\"\n",
     "fname_grid_fmt = LUIGI_OUT_FOLDER+\"/Datasets_compressed/{0}/hours/{1}.txt\"\n",
     "spectra_fn_fmt = LUIGI_OUT_FOLDER+\"/spectra/{0}/{1}_{2}_{3}.npz\""
@@ -99,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:50:14.084300Z",
-     "start_time": "2020-06-04T08:50:14.080011Z"
+     "end_time": "2020-06-04T09:07:13.863717Z",
+     "start_time": "2020-06-04T09:07:13.857943Z"
     },
     "init_cell": true
    },
@@ -129,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:17.943492Z",
-     "start_time": "2020-06-04T08:35:17.087Z"
+     "end_time": "2020-06-04T09:07:13.869746Z",
+     "start_time": "2020-06-04T09:07:13.866708Z"
     },
     "init_cell": true
    },
@@ -148,11 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:17.944926Z",
-     "start_time": "2020-06-04T08:35:17.090Z"
+     "end_time": "2020-06-04T09:07:13.874808Z",
+     "start_time": "2020-06-04T09:07:13.872363Z"
     },
     "init_cell": true
    },
@@ -167,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:17.946517Z",
-     "start_time": "2020-06-04T08:35:17.093Z"
+     "end_time": "2020-06-04T09:07:13.887648Z",
+     "start_time": "2020-06-04T09:07:13.876198Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -249,11 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:17.947916Z",
-     "start_time": "2020-06-04T08:35:17.096Z"
+     "end_time": "2020-06-04T09:07:13.893653Z",
+     "start_time": "2020-06-04T09:07:13.889015Z"
     },
     "init_cell": true
    },
@@ -277,11 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:17.949370Z",
-     "start_time": "2020-06-04T08:35:17.099Z"
+     "end_time": "2020-06-04T09:07:13.906161Z",
+     "start_time": "2020-06-04T09:07:13.895261Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -2262,11 +2262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T08:35:17.950828Z",
-     "start_time": "2020-06-04T08:35:17.101Z"
+     "end_time": "2020-06-04T09:07:13.919242Z",
+     "start_time": "2020-06-04T09:07:13.907765Z"
     },
     "code_folding": [],
     "init_cell": true
