LUIGI_OUT_FOLDER can me imported from other submodules

--- a/PoC - W-k spectra.ipynb
+++ b/PoC - W-k spectra.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:12.883022Z",
-     "start_time": "2020-06-04T09:07:12.878853Z"
+     "end_time": "2020-06-04T09:20:00.266567Z",
+     "start_time": "2020-06-04T09:20:00.264671Z"
     },
     "init_cell": true
    },
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.311833Z",
-     "start_time": "2020-06-04T09:07:12.890587Z"
+     "end_time": "2020-06-04T09:20:00.270180Z",
+     "start_time": "2020-06-04T09:20:00.267809Z"
     },
     "init_cell": true
    },
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.848034Z",
-     "start_time": "2020-06-04T09:07:13.313931Z"
+     "end_time": "2020-06-04T09:20:00.294034Z",
+     "start_time": "2020-06-04T09:20:00.271487Z"
     },
     "init_cell": true
    },
@@ -80,18 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.855441Z",
-     "start_time": "2020-06-04T09:07:13.850952Z"
+     "end_time": "2020-06-04T09:20:00.301999Z",
+     "start_time": "2020-06-04T09:20:00.297833Z"
     },
     "init_cell": true
    },
    "outputs": [],
    "source": [
-    "#from spectral_analysis.common_vars.directories import LUIGI_OUT_FOLDER\n",
-    "from spectral_analysis.luigi_workflows.output import LUIGI_OUT_FOLDER\n",
+    "from spectral_analysis.common_vars.directories import LUIGI_OUT_FOLDER\n",
     "fname_var_fmt = LUIGI_OUT_FOLDER+\"/Datasets_compressed/{0}/{1}/{2}0_{3:05d}.npz\"\n",
     "fname_grid_fmt = LUIGI_OUT_FOLDER+\"/Datasets_compressed/{0}/hours/{1}.txt\"\n",
     "spectra_fn_fmt = LUIGI_OUT_FOLDER+\"/spectra/{0}/{1}_{2}_{3}.npz\""
@@ -99,11 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.863717Z",
-     "start_time": "2020-06-04T09:07:13.857943Z"
+     "end_time": "2020-06-04T09:20:00.306192Z",
+     "start_time": "2020-06-04T09:20:00.303800Z"
     },
     "init_cell": true
    },
@@ -129,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.869746Z",
-     "start_time": "2020-06-04T09:07:13.866708Z"
+     "end_time": "2020-06-04T09:20:00.310620Z",
+     "start_time": "2020-06-04T09:20:00.307641Z"
     },
     "init_cell": true
    },
@@ -148,11 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.874808Z",
-     "start_time": "2020-06-04T09:07:13.872363Z"
+     "end_time": "2020-06-04T09:20:00.314368Z",
+     "start_time": "2020-06-04T09:20:00.311899Z"
     },
     "init_cell": true
    },
@@ -167,11 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.887648Z",
-     "start_time": "2020-06-04T09:07:13.876198Z"
+     "end_time": "2020-06-04T09:20:00.326893Z",
+     "start_time": "2020-06-04T09:20:00.316039Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -249,11 +248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.893653Z",
-     "start_time": "2020-06-04T09:07:13.889015Z"
+     "end_time": "2020-06-04T09:20:00.333223Z",
+     "start_time": "2020-06-04T09:20:00.328380Z"
     },
     "init_cell": true
    },
@@ -277,11 +276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.906161Z",
-     "start_time": "2020-06-04T09:07:13.895261Z"
+     "end_time": "2020-06-04T09:20:00.346306Z",
+     "start_time": "2020-06-04T09:20:00.334733Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -2262,11 +2261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T09:07:13.919242Z",
-     "start_time": "2020-06-04T09:07:13.907765Z"
+     "end_time": "2020-06-04T09:20:00.359363Z",
+     "start_time": "2020-06-04T09:20:00.348131Z"
     },
     "code_folding": [],
     "init_cell": true
