--- a/PoC - W-k spectra.ipynb
+++ b/PoC - W-k spectra.ipynb
@@ -571,13 +571,7 @@
       "Input shapes: E,k,l,f (288, 287, 1093) (288,) (287,) (1093,)\n",
       "Grid shapes: k,l,K (288, 287) (288, 287) (288, 287)\n",
       "Indices shape: x,y (288, 287) (288, 287)\n",
-      "Nbins 143\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nbins 143\n",
       "Saved /home/antonio/Tesis/spectra/809/RV_JFM_hours.npz\n",
       "KE\n",
       "U Energy (x,y,t) 805080.9833558887\n",
@@ -789,13 +783,7 @@
       "Input shapes: E,k,l,f (288, 287, 1093) (288,) (287,) (1093,)\n",
       "Grid shapes: k,l,K (288, 287) (288, 287) (288, 287)\n",
       "Indices shape: x,y (288, 287) (288, 287)\n",
-      "Nbins 143\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nbins 143\n",
       "Saved /home/antonio/Tesis/spectra/852/KE_JFM_hours.npz\n",
       "DIV\n",
       "DIV Energy (x,y,t) 0.08761760625682231\n",
@@ -1005,13 +993,7 @@
       "Grid shapes: k,l,K (288, 289) (288, 289) (288, 289)\n",
       "Indices shape: x,y (288, 289) (288, 289)\n",
       "Nbins 143\n",
-      "Saved /home/antonio/Tesis/spectra/709/DIV_JFM_hours.npz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Saved /home/antonio/Tesis/spectra/709/DIV_JFM_hours.npz\n",
       "dx,dy,dt 2.221089052232594 2.0438652287822525 1\n",
       "** Calculating spectra for  ['RV', 'KE', 'DIV']\n",
       "Loading U,V fields\n",
@@ -1226,13 +1208,7 @@
       "Input shapes: E,k,l,f (288, 289, 1105) (288,) (289,) (1105,)\n",
       "Grid shapes: k,l,K (288, 289) (288, 289) (288, 289)\n",
       "Indices shape: x,y (288, 289) (288, 289)\n",
-      "Nbins 143\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nbins 143\n",
       "Saved /home/antonio/Tesis/spectra/750/RV_ASO_hours.npz\n",
       "KE\n",
       "U Energy (x,y,t) 1114083.42050157\n",
@@ -1444,13 +1420,7 @@
       "Input shapes: E,k,l,f (290, 289, 1105) (290,) (289,) (1105,)\n",
       "Grid shapes: k,l,K (290, 289) (290, 289) (290, 289)\n",
       "Indices shape: x,y (290, 289) (290, 289)\n",
-      "Nbins 144\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nbins 144\n",
       "Saved /home/antonio/Tesis/spectra/450/KE_ASO_hours.npz\n",
       "DIV\n",
       "DIV Energy (x,y,t) 0.0861832028688325\n",
@@ -1660,13 +1630,7 @@
       "Grid shapes: k,l,K (288, 289) (288, 289) (288, 289)\n",
       "Indices shape: x,y (288, 289) (288, 289)\n",
       "Nbins 144\n",
-      "Saved /home/antonio/Tesis/spectra/596/DIV_ASO_hours.npz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Saved /home/antonio/Tesis/spectra/596/DIV_ASO_hours.npz\n",
       "dx,dy,dt 2.069495595077345 1.9029611794667736 1\n",
       "** Calculating spectra for  ['RV', 'KE', 'DIV']\n",
       "Loading U,V fields\n",
@@ -1881,13 +1845,7 @@
       "Input shapes: E,k,l,f (290, 289, 1093) (290,) (289,) (1093,)\n",
       "Grid shapes: k,l,K (290, 289) (290, 289) (290, 289)\n",
       "Indices shape: x,y (290, 289) (290, 289)\n",
-      "Nbins 144\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nbins 144\n",
       "Saved /home/antonio/Tesis/spectra/602/KE_JFM_hours.npz\n",
       "DIV\n",
       "DIV Energy (x,y,t) 0.09645639748826493\n",
@@ -2100,13 +2058,7 @@
       "Saved /home/antonio/Tesis/spectra/751/DIV_JFM_hours.npz\n",
       "dx,dy,dt 1.9029611794667736 2.0694955950773455 1\n",
       "** Calculating spectra for  ['RV', 'KE', 'DIV']\n",
-      "Loading U,V fields\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Loading U,V fields\n",
       "751 7752\n",
       "UV shape (288, 289, 2208)\n",
       "U,V shapes (2208, 288, 289) (2208, 288, 289)  -- total elements: 183776256\n",
@@ -2336,8 +2288,7 @@
     "ExecuteTime": {
      "end_time": "2020-05-14T08:55:32.869571Z",
      "start_time": "2020-05-14T08:55:27.547038Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -2663,8 +2614,7 @@
     "ExecuteTime": {
      "end_time": "2020-05-15T07:24:12.278689Z",
      "start_time": "2020-05-15T07:23:53.427483Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -2678,8 +2628,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-27T04:47:13.064153Z",
      "start_time": "2020-04-27T04:43:02.428Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -2693,8 +2642,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-27T04:47:13.065203Z",
      "start_time": "2020-04-27T04:43:02.430Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -2708,8 +2656,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-27T04:47:13.066239Z",
      "start_time": "2020-04-27T04:43:02.434Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -2723,8 +2670,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-27T04:47:13.067383Z",
      "start_time": "2020-04-27T04:43:02.437Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
@@ -2742,9 +2688,9 @@
  "metadata": {
   "celltoolbar": "Initialization Cell",
   "kernelspec": {
-   "display_name": "LLC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "llc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2814,5 +2760,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
